2005-05-09  Vivek Jain  <jvivek@novell.com>

	**Fixes #273846
	* calendar/e-cal-backend-exchange.c: (get_attach_file_contents),
	Modified the function to take length as an argument, so that we
	can return no of bytes in the file.
	(build_msg): pass the len pointer and use this length for writing the
	file

2005-04-07  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Bumped to 2.2.2
	* NEWS : Updated

2005-04-06  Vivek Jain  <jvivek@novell.com>
 
	**Fixes #74218
	* calendar/e-cal-backend-exchange-calendar.c
	(modify_object_with_href):dup the string before assigning the 
	value returned by icaltimezone_get_tzid. 

2005-04-06  Chenthill Palanisamy  <pchenthill@novell.com>
 
	Fixes #74227
	* calendar/e-cal-backend-exchange-calendar.c
       	(remove_object): Removed the check for the presence of object 
	and assign proper values to old_object and object.
	(receive_objects), (book_resource): Do not send NULL for the 
	last argument in remove_object

2005-04-6  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #73969
	* calendar/e-cal-backend-exchange-calendar.c: (receive_objects): If the 
	rid is not present and the method is CANCEL remove the recurrence event
	completely.
				
2005-04-05  Ahmad Riza H Nst  <ari@160c.afraid.org>

	* configure.in: Added id (Indonesian) to ALL_LINGUAS line.

2005-04-01  Adi Attar  <aattar@cvs.gnome.org>

	* configure.in: Added "xh" to ALL_LINGUAS.

2005-03-31  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

2005-03-31  Sushma Rai  <rsushma@novell.com>

	Patch by Sarfraaz Ahmed for a exchange-storage crash while exiting
	Evolution.
	* storage/exchange-account.c (exchange_account_set_online): Not setting
	"account_online" flag, as it gets initialized in
	exchange_account_connect().

	* storage/exchange-hierarchy-somedav.c (scan_subtree): Using the
	offline mode parameter for the function, instead of reading it again.

	* storage/exchange-offline-listener.c (setup_offline_listener): Reading